--- a/frontend/src/pages/investment/balance/Balance.module.css
+++ b/frontend/src/pages/investment/balance/Balance.module.css
@@ -1,14 +1,102 @@
+.title{
+    display:grid;
+    grid-template-columns: 10% 10%;
+    align-items: center;
+}
+.title button{
+    height: 50px;
+}
+
 .balance-container{
     text-align: left;
 }
 .balance{
     display: grid;
-    grid-template-columns: 20% 20%;
+    grid-template-columns: 30% 30%;
     color: white;
+    border-bottom: 1px solid gray;
 }
 
-.balance-won{
+.balance-format{
     display: grid;
     grid-template-columns: 50% 50%;
+    height: 50px;
     margin-right: 50px;
+}
+
+
+.balance-detail{
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 30% 30%;
+    border-bottom: 1px solid gray;
+}
+
+.balance-coinlist{
+    width: 100%;
+}
+
+.coin-table{
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+th{
+    background-color: rgb(82, 82, 82);
+}
+tr{
+    border-bottom: 1px solid gray;
+}
+
+.column-format{
+    width: 16%;
+}
+
+.color-format.positive{
+    color:rgb(255, 44, 44)
+}
+.color-format.negative{
+    color:rgb(64, 64, 255)
+}
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup-inner {
+    width: 40%;
+    display: grid;
+    justify-content: center;
+    background: black;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+  }
+  
+  .button-container button{
+    width: 100px;
+    height: 50px;
+    margin: 10px;
+  }
+
+  .button-container{
+    display: grid;
+    justify-content: center;
+  }
+
+  .input-number{
+    width: 150px;
+    height: 30px;
+  }
+  .coin-symbol{
+    font-size: 10px;
+    color: gray;
 }
